<resources>
    <string name="app_name">AnDRAWoid</string>
    <string name="action_erase">erase</string>
    <string name="action_delete">delete</string>
    <string name="action_undo">undo</string>
    <string name="action_brush">brush</string>
    <string name="action_color">color</string>
    <string name="action_save">save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_select">Select</string>
    <string name="select_brush_size">Select brush size</string>
</resources>
